--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
                 <div id="install"></div>
             </div>
 
-			<h1 id="about_title_1"></h1>
+			<h1 id="about_title_1" style=" margin-top: 2rem;"></h1>
 			<p id="about_msg_1" class="text"></p>
 			<h2 id="about_title_2"></h2>
 			<p id="about_msg_2" class="text"></p>
