--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,7 @@
                 <div id="install"></div>
             </div>
 
-            <div class="cover2">
+            <div class="cover2" style=" margin-top: 2rem;">
                 <div>
                     <img class="avatar" src="../imgs/avatar.jpg" alt="github image">
                     <h2></h2>
