--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div id="install"></div>
             </div>
 
-            <h1>
+            <h1 style=" margin-top: 2rem;">
                 Tic Tac Toe
             </h1>
 
