--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/loading.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/game.css">
     <link rel="stylesheet" href="./css/social.css">
     <link rel="stylesheet" href="./css/mediaquery.css">
+    <script src="./js/loading.js"></script>
     <script src="./js/navigation.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/ttt.js"></script>
@@ -156,5 +158,7 @@
     </div>
 
 </body>
+
+<div class="se-pre-con"></div>
 
 </html>
