--- a/pages/about.html
+++ b/pages/about.html
@@ -3,11 +3,13 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../css/loading.css">
 	<link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/game.css">
     <link rel="stylesheet" href="../css/social.css">
     <link rel="stylesheet" href="../css/mediaquery.css">
 	<link rel="stylesheet" href="../css/prism.css">
+	<script src="../js/loading.js"></script>
 	<script src="../js/jquery-3.6.0.min.js"></script>
 	<script src="../js/prism.js"></script>
 	<script src="../js/navigation.js"></script>
@@ -66,5 +68,7 @@
 	</div>
 
 </body>
+
+<div class="se-pre-con"></div>
 
 </html>
